2007-10-12  Guillaume Deslandes  <deslandes@gostai.com>

	Use #__LINE__ to reset line counter after autoloaded files
	* src/uconnection.cc,
	* src/userver.cc: Here.

2007-10-12  Guillaume Deslandes  <deslandes@gostai.com>

	Add #__LINE__ and #__FILE__ tokens to lexer
	* src/parser/bison/utoken.l: Here.

2007-09-10  mefyl  <mefyl@lrde.epita.fr>

	merge -r 1594:1604 https://svn.gostai.com/svn/kernel1/branches/1.0

	2007-09-26  Guillaume Deslandes  <deslandes@gostai.com>
	Reactivate doc subdir
	* Makefile.am: Here.

	2007-09-24  Guillaume Deslandes  <deslandes@gostai.com>
	Remove extra include in ugrammar.y
	* src/parser/bison/ugrammar.y: Here.

	2007-09-24  Guillaume Deslandes  <deslandes@gostai.com>
	Restore KNOWN_BUGS, update libport external
	* KNOWN_BUGS: New.

	2007-09-24  Guillaume Deslandes  <deslandes@gostai.com>
	Merge nm branch to 1.0
	* ChangeLog: .
	* KNOWN_BUGS: Remove.
	* Makefile.am: .
	* doc/Doxyfile.in: .
	* src/flavorable.hh: .
	* src/network/bsdnet/network.cc: .
	* src/parser/bison/ugrammar.y: .
	* src/parser/bison/utoken.l: .
	* src/ucommand.cc: .
	* src/ucommand.hh: .
	* src/ucomplaints.cc: .
	* src/uexpression.cc: .
	* src/uobject.cc: .
	* src/userver.cc: .
	* src/userver.hh: .
	* src/utypes.hh: .
	* src/uvalue.cc: .
	* src/uvar.cc: .
	* src/uvariable.cc: .
	* src/uvariable.hh: .
	* tests-local.mk: .
	* vcs/local.rb: .

	2007-09-24  Guillaume Deslandes  <deslandes@gostai.com>
	Fix parser conflicts for URBI side pointers
	* src/parser/bison/ugrammar.y: Handle token arrow.
	Comment unstable array rules for now.
	* src/parser/bison/utoken.l: Add token arrow.

	2007-09-24  Guillaume Deslandes  <deslandes@gostai.com>
	Update mail address to mailing list
	* local.rb: Here.

	2007-09-20  Guillaume Deslandes  <deslandes@gostai.com>
	Fixes and cleaning
	* Makefile.am: Update libport inclusion.
	* doc/Doxyfile.in: .
	* src/ucommand.cc: Fix assign to derivative error.
	Fix segfault on remote.fct(other_remote.fct(x)) calls.