@@ -1,3 +1,8 @@
+2007-10-15  Guillaume Deslandes  <deslandes@gostai.com>
+
+	Use a more CPP-like way for #line
+	* src/parser/bison/utoken.l: Here.
+
 2007-10-12  Guillaume Deslandes  <deslandes@gostai.com>
 
 	Use #__LINE__ to reset line counter after autoloaded files
